# CHARM_catalogue

./: .gitignore  LICENSE  Models  README.md  docker-compose.yml  note  production.yml  server.py  sonar-project.properties  sonarqube_analys  todo
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_production  Rocket.toml  config.go  config.toml  go.mod  main.go
backend/.cargo/: config.toml
backend/.sqlx/: query-041d68fe72d932a3aa0cdc03924efc354b16081b5528d71b85e94d0f5b708c04.json  query-0592551ed2611b77f1a9b1c5e74a6cf0b91c916c12a6057e7ee6313f6bf5de49.json  query-06f26aac5a5704fd450f31188d8e73d5da56a17af1f8f1e578bbc5033ecb268e.json  query-0cb8b9cb252edb68022f336c52e3588d5d1d155833bb92927e299a3f6c44ffd8.json  query-0fa60c36e86f2bdcb5db01e24f365d32094b85903a383762e91830b089f87efd.json  query-1ced6f8f63e6bee5c664cb0735ae3c7e663a5a0a58457533160b65b2f87d4659.json  query-1d5f9bb51e88b7e0021126ea86d025453e169398c491d7f3b905c59c6adce5a6.json  query-25cff3811c93e983ca56837c7709341718a7b080d5124c407276b19cb37d8bc9.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-306f26c38c459fbfc6ddd1e71e7099b265e24eb1f17acbf28843aa3c95e93dab.json  query-321e4d3e94ed0d84140d0f020c0a14ee2cfead3555dd1949ad5c7bf836055602.json  query-3833334418ec7fa004a2b8ce5eb8a04d180e03117b91f16bfe3eabfa652db1b1.json  query-385a2f336a04b5e10a79989ce343f354a381222360b4537ae45aea4131f9f857.json  query-3b1cbc2c638cebf19f7726ecf166e6d45d7cf276b63ce3f7755e527e669ee8b1.json  query-3b333d5cf7ada2722065f341111d177fbf90b0a68086069cff6f707c23783905.json  (+46 more)
(+329 files in other folders)
