[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4"}  
env_logger = { version = "0.10" }
sqlx = { version = "0.6", default-features = false, features = ["postgres", "runtime-tokio-rustls",  "macros", "offline", "migrate", "chrono"]}
serde = { version = "1.0" }
derive_more = { version = "0.99"}
chrono = { version = "0.4.2", features = ["serde"]}
